--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<title>The Mind Landfill</title>
+<html>
+
+  <title>The Mind Landfill</title>
 
 <body>
   
 </body>
+
+
+</html>
