--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <title>The Mind Landfill</title>
 
 <body>
-  
+  <h1> This is a test to see how this website will be formatted</h1>
+  <h1> Here is what I want to accomplish </h1>
+  <ul>
+    <li>Favorite Movies</li>
+    <li>Favorite Songs</li>
+    <li>Random thoughts and writing</li>
+    <li>Doodles</li>
+  </ul>
 </body>
 
 
