--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-  <title>The Mind Landfill</title>
+  <title>Important Films</title>
 
 <body>
-  <h1> This is a test to see how this website will be formatted</h1>
-  <h1> Here is what I want to accomplish </h1>
-  <ul>
-    <li>Favorite Movies</li>
-    <li>Favorite Songs</li>
-    <li>Random thoughts and writing</li>
-    <li>Doodles</li>
-  </ul>
+ <h1>My Top Ten Favorite Films</h1>
+  <h2>Films that are/were important to me, and could be important to you as well.</h2>
+  <p>Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present ten movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
+  <p>I will be presenting the films from #10 to #1, to build suspense, of course.</p>
 </body>
 
 
