--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
   <h2>Films that are/were important to me, and could be important to you as well.</h2>
   <p>Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present ten movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
   <p>I will be presenting the films from #10 to #1, to build suspense, of course.</p>
+
+<h2>#10: Millenium Actress (2001)</h2>
+  <h4>by Satoshi Kon</h4>
+
+<h2>#9: Seven Psychopaths (2012)</h2>
+  <h4>by Martin McDonagh</h4>
+
+<h2>#8: The Substance (2024)</h2>
+  <h4>by Coralie Fargeat</h4>
+
+<h2>#7: Bringing Out the Dead (1999)</h2>
+  <h4>by Martin Scorsese</h4>
+
+<h2>#6: ...</h2>
+
+<h2>#5: Paprika (2006)</h2>
+  <h4>by Satoshi Kon</h4>
+
+<h2>#4: Mysterious Skin (2004)</h2>
+  <h4>by Gregg Araki</h4>
+
+<h2>#3: Videodrome (1980)</h2>
+  <h4>by David Cronenberg</h4>
+
+<h2>#2: In Bruges (2008)</h2>
+  <h4>by Martin McDonagh</h4>
+
+<h3>Honorable Mention: FLCL (2000)</h3>
+  <h5>by Kazuya Tsurumaki</h5>
+
+<h2>#1: Oldboy (2003)</h2>
+  <h4>by Park Chan-wook</h4>
 </body>
 
 
