--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <p>Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present ten movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
   <p>I will be presenting the films from #10 to #1, to build suspense, of course.</p>
 
+  
+  <div>
 <h2>#10: Millenium Actress (2001)</h2>
   <h4>by Satoshi Kon</h4>
 
 <h2>#9: Seven Psychopaths (2012)</h2>
   <h4>by Martin McDonagh</h4>
-
+<p>In this wildly off-kilter film, screenwriter Marty (a not-so subtle self-insert of the writer/director Martin McDonagh) struggles to come up with a new screenplay idea, as he hits various creative blocks<br>and sprials into a life of alcoholism and being surrounded by just plain
+horrible people. Sounds depressing? Well, this movie is far from it, as all the "negatives" of Marty's life are presented in an absurdist way, where various side characters bring energy to the film, and Marty's life. A very unconventional comfort film for me.</p>
 <h2>#8: The Substance (2024)</h2>
   <h4>by Coralie Fargeat</h4>
 
@@ -40,6 +43,7 @@
 
 <h2>#1: Oldboy (2003)</h2>
   <h4>by Park Chan-wook</h4>
+</div>
 </body>
 
 
