--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h2>#9: Seven Psychopaths (2012)</h2>
   <h4>by Martin McDonagh</h4>
-    <img src="https://m.media-amazon.com/images/M/MV5BMTgwMzUxMjc0M15BMl5BanBnXkFtZTcwMzQ2MjYyOA@@._V1_FMjpg_UX1000_.jpg" alt="Seven Psychopaths Poster">
+    <img src="https://m.media-amazon.com/images/M/MV5BMTgwMzUxMjc0M15BMl5BanBnXkFtZTcwMzQ2MjYyOA@@._V1_FMjpg_UX1000_.jpg" alt="Seven Psychopaths Poster" width="100" height="200">
 <p style="font-family: 'Courier New'">In this wildly off-kilter film, screenwriter Marty (a not-so subtle self-insert of the writer/director Martin McDonagh) struggles to come up with a new screenplay idea, as he hits various creative blocks and sprials into a life of alcoholism and being surrounded by just plain
 horrible people. Sounds depressing? Well, this movie is far from it, as all the "negatives" of Marty's life are presented in an absurdist way, where various side characters bring energy to the film, and Marty's life. A very unconventional comfort film for me.</p>
 <h2>#8: The Substance (2024)</h2>
