--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
   <title>Important Films</title>
 
 <body>
- <h1>My Top Ten Favorite Films</h1>
+ <h1>My Top Six Favorite Films</h1>
   <h2>Films that are/were important to me, and could be important to you as well.</h2>
   <p>Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present ten movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
-  <p>I will be presenting the films from #10 to #1, to build suspense, of course.</p>
+  <p>I will be presenting the films from #6 to #1, to build suspense, of course.</p>
+  <p>Why six? Cause it's an unexpected and bold number for a list!</p>
 
   
   <div>
-<h2>#10: Millenium Actress (2001)</h2>
-  <h4>by Satoshi Kon</h4>
 
-<h2>#9: Seven Psychopaths (2012)</h2>
+<h2>#6: Seven Psychopaths (2012)</h2>
   <h4>by Martin McDonagh</h4>
     <img src="https://m.media-amazon.com/images/M/MV5BMTgwMzUxMjc0M15BMl5BanBnXkFtZTcwMzQ2MjYyOA@@._V1_FMjpg_UX1000_.jpg" alt="Seven Psychopaths Poster" width="300" height="400">
 <p style="font-family: 'Courier New'">In this wildly off-kilter film, screenwriter Marty (a not-so subtle self-insert of the writer/director Martin McDonagh) struggles to come up with a new screenplay idea, as he hits various creative blocks and sprials into a life of alcoholism and being surrounded by just plain
 horrible people. Sounds depressing? Well, this movie is far from it, as all the "negatives" of Marty's life are presented in an absurdist way, where various side characters bring energy to the film, and Marty's life. A very unconventional comfort film for me.</p>
-<h2>#8: The Substance (2024)</h2>
-  <h4>by Coralie Fargeat</h4>
-
-<h2>#7: Bringing Out the Dead (1999)</h2>
-  <h4>by Martin Scorsese</h4>
-
-<h2>#6: ...</h2>
 
 <h2>#5: Paprika (2006)</h2>
   <h4>by Satoshi Kon</h4>
