--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ horrible people. Sounds depressing? Well, this movie is far from it, as all the 
 
 <h2>#5: Paprika (2006)</h2>
   <h4>by Satoshi Kon</h4>
-
+    <img src="https://m.media-amazon.com/images/M/MV5BZGJkYjkyMDUtM2U3ZC00NDM3LWI0MzItZjU5MmYwYjg2YmIwXkEyXkFqcGc@._V1_.jpg" alt="Paprika Poster" width=
+<p style="font-family: 'Courier New'">In this Japanese animated film, Atsuko Chiba, a dream therapist, masquerades as her alter ego "Paprika" when doing underground dream therapy procedures against her company's policies. However, once she learns that the device she utilizes for these procedures has been stolen
+and used maliciously, it is up to her and her various allies to prevent the device from altering the minds of innocent people across the country. The film is nothing short of thrilling and engaging, with a wholly unique plot which is an ode and critique to technology and art. Also, amazing score by Susumu Hirasawa! </p>
 <h2>#4: Mysterious Skin (2004)</h2>
   <h4>by Gregg Araki</h4>
 
@@ -30,9 +32,6 @@ horrible people. Sounds depressing? Well, this movie is far from it, as all the 
 
 <h2>#2: In Bruges (2008)</h2>
   <h4>by Martin McDonagh</h4>
-
-<h3>Honorable Mention: FLCL (2000)</h3>
-  <h5>by Kazuya Tsurumaki</h5>
 
 <h2>#1: Oldboy (2003)</h2>
   <h4>by Park Chan-wook</h4>
