--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@ horrible people. Sounds depressing? Well, this movie is far from it, as all the 
 
 <h2>#5: Paprika (2006)</h2>
   <h4>by Satoshi Kon</h4>
-    <img src="https://m.media-amazon.com/images/M/MV5BZGJkYjkyMDUtM2U3ZC00NDM3LWI0MzItZjU5MmYwYjg2YmIwXkEyXkFqcGc@._V1_.jpg" alt="Paprika Poster" width=
+    <img src="https://m.media-amazon.com/images/M/MV5BZGJkYjkyMDUtM2U3ZC00NDM3LWI0MzItZjU5MmYwYjg2YmIwXkEyXkFqcGc@._V1_.jpg" alt="Paprika Poster" width="300" height="400">
 <p style="font-family: 'Courier New'">In this Japanese animated film, Atsuko Chiba, a dream therapist, masquerades as her alter ego "Paprika" when doing underground dream therapy procedures against her company's policies. However, once she learns that the device she utilizes for these procedures has been stolen
 and used maliciously, it is up to her and her various allies to prevent the device from altering the minds of innocent people across the country. The film is nothing short of thrilling and engaging, with a wholly unique plot which is an ode and critique to technology and art. Also, amazing score by Susumu Hirasawa! </p>
-<h2>#4: Mysterious Skin (2004)</h2>
-  <h4>by Gregg Araki</h4>
 
+    <h2>#4: Mysterious Skin (2004)</h2>
+  <h4>by Gregg Araki</h4>
+<p style="font-family: 'Courier New'"> In this coming-of-age drama, two young men, Brian and Neil, experience a disturbing tragedy in their childhoods involving their little league coach, where the trauma of it carried over into their older selves. Years later, Brain has repressed the memeory entirely, and seeks Neil</p>
 <h2>#3: Videodrome (1980)</h2>
   <h4>by David Cronenberg</h4>
 
