--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@ and used maliciously, it is up to her and her various allies to prevent the devi
 
     <h2>#4: Mysterious Skin (2004)</h2>
   <h4>by Gregg Araki</h4>
-<p style="font-family: 'Courier New'"> In this coming-of-age drama, two young men, Brian and Neil, experience a disturbing tragedy in their childhoods involving their little league coach, where the trauma of it carried over into their older selves. Years later, Brain has repressed the memeory entirely, and seeks Neil</p>
-<h2>#3: Videodrome (1980)</h2>
+<p style="font-family: 'Courier New'"> In this coming-of-age drama, two young men, Brian and Neil, experience a disturbing tragedy in their childhoods involving their little league coach, where the trauma of it carried over into their older selves. Years later, Brain has repressed the memeory entirely, and seeks Neil, a now
+self-destructive, bitter young man, to remember what happened that night. This movie does not pull its punches. It's harsh, cold, and yet I could not take my eyes off of it. Incredibly dark though, fair warning...</p>
+
+    <h2>#3: Videodrome (1980)</h2>
   <h4>by David Cronenberg</h4>
 
 <h2>#2: In Bruges (2008)</h2>
