--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  <style>
+    p {color:#FFFFFF;}
+    h1 {color:#FFFFFF;}
+    h2 {color:#FFFFFF;}
+    h4 {color:#FFFFFF;}
+    body {background:#000000;}
+    
+  </style>
+</head>
   <title>Important Films</title>
 
 <body>
@@ -32,10 +41,12 @@ self-destructive, bitter young man, to remember what happened that night. This m
 
     <h2>#3: Videodrome (1980)</h2>
   <h4>by David Cronenberg</h4>
+<p style="font-family: 'Courier New'"> In this satirical body horror movie, Max Renn, an adult film producer, encounters a peculiar broadcasting signal dubbed "Videodrome," which depicts people experiencing acts of violence enacted onto them. After viewing the broadcast, Max begins to experience hallucinations himself,
+  where the disturbing things in his mind are eventually translated into real-life, starting with his body. The film is a commentary on media, technology, and absurd conspiracy theories, all of which I am interested in learning about. The film is a mix of dark comedy, thought provoking commentary, and of course, gross images. </p>
 
-<h2>#2: In Bruges (2008)</h2>
+  <h2>#2: In Bruges (2008)</h2>
   <h4>by Martin McDonagh</h4>
-
+<p style="font-family: 'Courier New'"> In this crime comedy-drama, Ray and Ken are two hitman laying low in the city of Bruges, Belgium. Ray is experiencing his own turmoils due to a mission gone wrong, and is considering taking his own life 
 <h2>#1: Oldboy (2003)</h2>
   <h4>by Park Chan-wook</h4>
 </div>
