--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <style>
     p {color:#FFFFFF;}
+    p {text-align: center;}
+    h1 {text-align: center;}
     h1 {color:#FFFFFF;}
     h2 {color:#FFFFFF;}
+    h2 {text-align: center;}
     h4 {color:#FFFFFF;}
+    h4 {text-align: center;}
     body {background:#000000;}
     
   </style>
