--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <div>
 
-<h2>#6: Seven Psychopaths (2012)</h2>
+<h2>#6: <a> href="https://en.wikipedia.org/wiki/Seven_Psychopaths" target="_blank">Seven Psychopaths</a> (2012)</h2>
   <h4>by Martin McDonagh</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BMTgwMzUxMjc0M15BMl5BanBnXkFtZTcwMzQ2MjYyOA@@._V1_FMjpg_UX1000_.jpg" alt="Seven Psychopaths Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'">In this wildly off-kilter film, screenwriter Marty (a not-so subtle self-insert of the writer/director Martin McDonagh) struggles to come up with a new screenplay idea, as he hits various creative blocks and sprials into a life of alcoholism and being surrounded by just plain
