--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ self-destructive, bitter young man, to remember what happened that night. This m
   the failed mission. An unapologetically crude yet somber film. The themes of regret and second chances are mixed in with a story of two hitmen of compeletely different personalities, with Ken being the "straight man" of the duo, and Ray acting like a moody teenager throughout, when he is clearly in his late 20's to early 30's. Love it. </p>
 <h2>#1: Oldboy (2003)</h2>
   <h4>by Park Chan-wook</h4>
-    <center><img="https://m.media-amazon.com/images/M/MV5BMTI3NTQyMzU5M15BMl5BanBnXkFtZTcwMTM2MjgyMQ@@._V1_.jpg" alt="Oldboy Poster" width="300" height="400"></center>
+    <center><img src="https://m.media-amazon.com/images/M/MV5BMTI3NTQyMzU5M15BMl5BanBnXkFtZTcwMTM2MjgyMQ@@._V1_.jpg" alt="Oldboy Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'"> Finally, in this mystery action-thriller film, Oh Dae-su is an office worker who has fallen into alcoholism and recklessness even though he has a child and wife. One night, he is kidnapped, where for the next FIFTEEN years, he is imprisoned far from society. His only connection to the outside world is through
   the television. After his time is up, he is released, where a mysterious individual, claiming to be the one responsible for his kidnapping, challenges him to find out why he was kidnapped in the first place. No other word can describe this film, but disturbing. It is engaging, iconic, and the plot twist is one of the most shocking I have seen in my life.
   I'm still proud of watching this movie when it was released back in 2023. Recommend. </p>
