--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <title>Important Films</title>
 
 <body>
- <h1>My Top Six Favorite Films</h1>
-  <h2>Films that are/were important to me, and could be important to you as well.</h2>
-  <p>Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present six movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
-  <p>I will be presenting the films from #6 to #1, to build suspense, of course.</p>
-  <p>Why six? Cause it's an unexpected and bold number for a list!</p>
+ <h1 style="font-family: 'Courier New'">My Top Six Favorite Films</h1>
+  <h2 style="font-family: 'Courier New'">Films that are/were important to me, and could be important to you as well.</h2>
+  <p style="font-family: 'Courier New'">Hello, visitor! If you see this website, chances are you know me personally, you are my Computer Science Teacher, or you lurk on Github a lot. Nevertheless, I want to present six movies that made a significant impact on me and changed how I view film and storytelling as a whole.</p>
+  <p style="font-family: 'Courier New'">I will be presenting the films from #6 to #1, to build suspense, of course.</p>
+  <p style="font-family: 'Courier New'">Why six? Cause it's an unexpected and bold number for a list!</p>
 
   
   <div>
@@ -32,30 +32,31 @@
 <p style="font-family: 'Courier New'">In this wildly off-kilter film, screenwriter Marty (a not-so subtle self-insert of the writer/director Martin McDonagh) struggles to come up with a new screenplay idea, as he hits various creative blocks and sprials into a life of alcoholism and being surrounded by just plain
 horrible people. Sounds depressing? Well, this movie is far from it, as all the "negatives" of Marty's life are presented in an absurdist way, where various side characters bring energy to the film, and Marty's life. A very unconventional comfort film for me.</p>
 
-<h2>#5: Paprika (2006)</h2>
+<h2>#5: <a href="https://en.wikipedia.org/wiki/Paprika_(2006_film)" target="_blank">Paprika</a> (2006)</h2>
   <h4>by Satoshi Kon</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BZGJkYjkyMDUtM2U3ZC00NDM3LWI0MzItZjU5MmYwYjg2YmIwXkEyXkFqcGc@._V1_.jpg" alt="Paprika Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'">In this Japanese animated film, Atsuko Chiba, a dream therapist, masquerades as her alter ego "Paprika" when doing underground dream therapy procedures against her company's policies. However, once she learns that the device she utilizes for these procedures has been stolen
 and used maliciously, it is up to her and her various allies to prevent the device from altering the minds of innocent people across the country. The film is nothing short of thrilling and engaging, with a wholly unique plot which is an ode and critique to technology and art. Also, amazing score by Susumu Hirasawa! </p>
 
-    <h2>#4: Mysterious Skin (2004)</h2>
+    <h2>#4: <a href="https://en.wikipedia.org/wiki/Mysterious_Skin" target="_blank">Mysterious Skin</a> (2004)</h2>
   <h4>by Gregg Araki</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BMTgxMjQ4NzE5OF5BMl5BanBnXkFtZTcwNzkwOTkyMQ@@._V1_.jpg" alt="Mysterious Skin Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'"> In this coming-of-age drama, two young men, Brian and Neil, experience a disturbing tragedy in their childhoods involving their little league coach, where the trauma of it carried over into their older selves. Years later, Brian has repressed the memeory entirely, and seeks Neil, a now
 self-destructive, bitter young man, to remember what happened that night. This movie does not pull its punches. It's harsh, cold, and yet I could not take my eyes off of it. Incredibly dark though, fair warning...</p>
 
-    <h2>#3: Videodrome (1980)</h2>
+    <h2>#3: <a href="https://en.wikipedia.org/wiki/Videodrome" target="_blank">Videodrome</a> (1980)</h2>
   <h4>by David Cronenberg</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BOTI0NDVlMjMtNWI5Yi00ZWM0LTg4NWUtNGRkYjU5NTBkZjVkXkEyXkFqcGc@._V1_.jpg" alt="Videodrome Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'"> In this satirical body horror movie, Max Renn, an adult film producer, encounters a peculiar broadcasting signal dubbed "Videodrome," which depicts people experiencing acts of violence enacted onto them. After viewing the broadcast, Max begins to experience hallucinations himself,
   where the disturbing things in his mind are eventually translated into real-life, starting with his body. The film is a commentary on media, technology, and absurd conspiracy theories, all of which I am interested in learning about. The film is a mix of dark comedy, thought provoking commentary, and of course, gross images. </p>
 
-  <h2>#2: In Bruges (2008)</h2>
+  <h2>#2: <a href="https://en.wikipedia.org/wiki/In_Bruges" target="_blank">In Bruges</a> (2008)</h2>
   <h4>by Martin McDonagh</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BNjliZjBlNDItOWUyZC00ZTExLTg5NmUtNzE5ZmQyZWVmZmE5XkEyXkFqcGc@._V1_.jpg" alt="In Bruges Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'"> In this crime comedy-drama, Ray and Ken are two hitman laying low in the city of Bruges, Belgium. Ray is experiencing his own turmoils due to a mission gone wrong, and is considering taking his own life during this trip. On Ken's side, he was assigned by their boss, Harry, to kill Ray due to
   the failed mission. An unapologetically crude yet somber film. The themes of regret and second chances are mixed in with a story of two hitmen of compeletely different personalities, with Ken being the "straight man" of the duo, and Ray acting like a moody teenager throughout, when he is clearly in his late 20's to early 30's. Love it. </p>
-<h2>#1: Oldboy (2003)</h2>
+
+    <h2>#1: <a href="https://en.wikipedia.org/wiki/Oldboy_(2003_film)" target="_blank">Oldboy</a> (2003)</h2>
   <h4>by Park Chan-wook</h4>
     <center><img src="https://m.media-amazon.com/images/M/MV5BMTI3NTQyMzU5M15BMl5BanBnXkFtZTcwMTM2MjgyMQ@@._V1_.jpg" alt="Oldboy Poster" width="300" height="400"></center>
 <p style="font-family: 'Courier New'"> Finally, in this mystery action-thriller film, Oh Dae-su is an office worker who has fallen into alcoholism and recklessness even though he has a child and wife. One night, he is kidnapped, where for the next FIFTEEN years, he is imprisoned far from society. His only connection to the outside world is through
