--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h2 style="font-family: 'Courier New'">Films that are/were important to me, and that you should maybe check out...</h2>
   <p style="font-family: 'Courier New'">Hello, visitor! I want to present six movies that made a significant impact on me, and changed how I view film and storytelling as a whole.</p>
   <p style="font-family: 'Courier New'">I will be presenting the films from #6 to #1, to build suspense, of course.</p>
-  <p style="font-family: 'Courier New'">Why six? Cause it's an unexpected and bold number for a list!</p>
+  <p style="font-family: 'Courier New'">Why six? Well, because it's an unexpected and bold number for a list!</p>
 
   
   <div>
