--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <p style="font-family: 'Courier New'">Hello, visitor! I want to present six movies that made a significant impact on me, and changed how I view film and storytelling as a whole.</p>
   <p style="font-family: 'Courier New'">I will be presenting the films from #6 to #1, to build suspense, of course.</p>
   <p style="font-family: 'Courier New'">Why six? Well, because it's an unexpected and bold number for a list!</p>
+  <p style="font-family: 'Courier New'">Posters taken from <a href="https://www.imdb.com/" target="_blank">Imdb.com</a>
 
   
   <div>
